fix title header not centered in some browsers

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -198,7 +198,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: -webkit-fill-available;
+  width: 100%;
   gap: 16px;
 }
 
